# centration

./: CMakeLists.txt  README.md
settings/: settings.cfg
src/: configReader.cpp  configReader.h  dataCentration.cpp  dataCentration.h  graphHandler.cpp  graphHandler.h  main.cpp
